--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>SHOWROOM</title>
   </head>
   <body>
-    <header>SHOWROOM</header>
+    <header><h1>SHOWROOM</h1></header>
     <main>
       <div class="block">
         <div>
